Done product api

--- a/src/DXP.SmartConnect.Ecom.API/appsettings.Development.json
+++ b/src/DXP.SmartConnect.Ecom.API/appsettings.Development.json
@@ -11,7 +11,8 @@
     "DefaultConnection": "Data Source=dev-sql1.gothink.local;Initial Catalog=SandboxProduct;persist security info=True;user id=dev-sqlaccess;password=Sysnify5355;"
   },
   "ApplicationSettings": {
-    "TermsOfService": "https://example.com/terms"
+    "TermsOfService": "https://example.com/terms",
+    "CloudContentUrl": "https://QCUnitedcloud.relationshop.net/RSData"
   },
   "ReadmeSettings": {
     "BuildNumber": "001",
@@ -29,5 +30,14 @@
   "ProviderSettings": {
     "ProviderName": "Mi9V8",
     "RequestUri": "https://storefrontgateway.unt.stg.v8.commerce.mi9cloud.com/api/"
+  },
+  "InMemoryCacheSettings": {
+    "ProductThreshHoldShouldCache": "15"
+  },
+  "ProductSettings": {
+    "Disclaimer": "ACTUAL PRODUCT PACKAGING AND MATERIALS MAY CONTAIN ADDITIONAL AND/OR DIFFERENT INGREDIENT, NUTRITIONAL OR PROPER USAGE INFORMATION THAN THE INFORMATION DISPLAYED ON OUR WEBSITE. YOU SHOULD NOT RELY SOLELY ON THE INFORMATION DISPLAYED ON OUR WEBSITE AND YOU SHOULD ALWAYS READ LABELS, WARNINGS AND DIRECTIONS PRIOR TO USING OR CONSUMING A PRODUCT. IF YOU HAVE QUESTIONS OR REQUIRE MORE INFORMATION ABOUT A PRODUCT, YOU SHOULD CONTACT THE MANUFACTURER DIRECTLY. CONTENT ON THIS WEBSITE IS FOR GENERAL REFERENCE PURPOSES ONLY AND IS NOT INTENDED TO SUBSTITUTE FOR ADVICE GIVEN BY A PHYSICIAN, PHARMACIST OR OTHER LICENSED HEALTH CARE PROFESSIONAL. YOU SHOULD NOT USE THE INFORMATION PRESENTED ON THIS WEBSITE FOR SELF-DIAGNOSIS OR FOR TREATING A HEALTH PROBLEM. MYWEBGROCER ASSUMES NO LIABILITY FOR INACCURACIES OR MISSTATEMENTS REGARDING ANY PRODUCT."
+  },
+  "ImageSettings": {
+    "ProductImageDimensions": "default"
   }
 }
