--- a/src/DXP.SmartConnect.Ecom.API/DXP.SmartConnect.Ecom.API.csproj
+++ b/src/DXP.SmartConnect.Ecom.API/DXP.SmartConnect.Ecom.API.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="Mapster" Version="7.1.3" />
+    <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
