#UDV2-3095 Handle sync order to Citrus - with Amazon SQS - implement function Send message to queue

--- a/src/DXP.SmartConnect.Ecom.API/appsettings.Development.json
+++ b/src/DXP.SmartConnect.Ecom.API/appsettings.Development.json
@@ -30,5 +30,12 @@
   "ProviderSettings": {
     "ProviderName": "Mi9V8",
     "RequestUri": "https://storefrontgateway.unt.stg.v8.commerce.mi9cloud.com/api/"
+  },
+  "AWS": {
+    "Profile": "local-dev",
+    "Region": "us-east-2"
+  },
+  "AmazonSQSSettings": {
+    "QueueUrl": "local-dev"
   }
 }
