--- a/src/DXP.SmartConnect.Ecom.API/DXP.SmartConnect.Ecom.API.csproj
+++ b/src/DXP.SmartConnect.Ecom.API/DXP.SmartConnect.Ecom.API.csproj
@@ -12,6 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.101" />
+    <PackageReference Include="AWSSDK.SQS" Version="3.5.1.21" />
     <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="1.4.0" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.7.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.10.0" />
