--- a/src/DXP.SmartConnect.Ecom.SharedKernel/DXP.SmartConnect.Ecom.SharedKernel.csproj
+++ b/src/DXP.SmartConnect.Ecom.SharedKernel/DXP.SmartConnect.Ecom.SharedKernel.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.SQS" Version="3.5.1.21" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.11" />
