--- a/tests/DXP.SmartConnect.Ecom.UnitTest/DXP.SmartConnect.Ecom.UnitTests.csproj
+++ b/tests/DXP.SmartConnect.Ecom.UnitTest/DXP.SmartConnect.Ecom.UnitTests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.101" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.11" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
