--- a/src/DXP.SmartConnect.Ecom.Core/DXP.SmartConnect.Ecom.Core.csproj
+++ b/src/DXP.SmartConnect.Ecom.Core/DXP.SmartConnect.Ecom.Core.csproj
@@ -8,12 +8,11 @@
   <ItemGroup>
     <PackageReference Include="Ardalis.GuardClauses" Version="1.4.2" />
     <PackageReference Include="Mapster" Version="7.1.3" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Events\" />
-    <Folder Include="Handlers\" />
     <Folder Include="ValueObjects\" />
   </ItemGroup>
 
