--- a/src/DXP.SmartConnect.Ecom.Infrastructure/DXP.SmartConnect.Ecom.Infrastructure.csproj
+++ b/src/DXP.SmartConnect.Ecom.Infrastructure/DXP.SmartConnect.Ecom.Infrastructure.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" PrivateAssets="all" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
